--- a/app2.gradle
+++ b/app2.gradle
@@ -98,7 +98,7 @@ android {
 //    }
 
     flavorDimensions "flavor"
-    productFlavors {
+    /*productFlavors {
         //develop
         _dev {
             dimension "flavor"
@@ -121,7 +121,7 @@ android {
             minSdkVersion Integer.parseInt(_M_SDK)
             resValue "bool", "is_preview", "false"
         }
-    }
+    }*/
     buildTypes {
         debug {
             //applicationIdSuffix ".debug"
