--- a/app2.gradle
+++ b/app2.gradle
@@ -98,8 +98,9 @@ android {
 //        }
 //    }
 
+    /*
     flavorDimensions "flavor"
-    /*productFlavors {
+    productFlavors {
         //develop
         _dev {
             dimension "flavor"
