--- a/libBase.gradle
+++ b/libBase.gradle
@@ -100,7 +100,7 @@ dependencies {
 //apply from: allGradle.jar
 //apply from: allGradle.publish
 
-apply from: 'https://gitee.com/angcyo/gradle/raw/master/versionForce.gradle'
-apply from: 'https://gitee.com/angcyo/gradle/raw/master/base.gradle'
-//apply from: 'https://gitee.com/angcyo/gradle/raw/master/jar.gradle'
-apply from: 'https://gitee.com/angcyo/gradle/raw/master/publish.gradle'
+apply from: "$gradleHost/master/versionForce.gradle"
+apply from: "$gradleHost/master/base.gradle"
+//apply from: "$gradleHost/master/jar.gradle"
+apply from: "$gradleHost/master/publish.gradle"
