--- a/fscaar.gradle
+++ b/fscaar.gradle
@@ -22,11 +22,11 @@ def urlFile = { url, name ->
 }
 
 dependencies {
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/common.aar', 'common.3.4.0.aar')
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/logger.aar', 'logger.3.4.0.aar')
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/encrypt.aar', 'encrypt.3.4.0.aar')
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/ota.aar', 'ota.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/common.aar', 'common.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/logger.aar', 'logger.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/encrypt.aar', 'encrypt.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/ota.aar', 'ota.3.4.0.aar')
 
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/ble.aar', 'ble.3.4.0.aar')
-    api urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/spp.aar', 'spp.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/ble.aar', 'ble.3.4.0.aar')
+    implementation urlFile('https://gitcode.net/angcyo/file/-/raw/master/aar/FeasyBlue/3.4.0/spp.aar', 'spp.3.4.0.aar')
 }
