--- a/appBase.gradle
+++ b/appBase.gradle
@@ -11,7 +11,8 @@ android {
         resValue "string", "os_name", osName()
         resValue "string", "user_name", userName()
         resValue "string", "schema", schema
-        //resValue "bool", "SHOW_DEBUG", "true"
+        resValue "bool", "show_debug", "false"
+        resValue "string", "local_ip", getLocalIp()
 
         buildConfigField "String", "USER_NAME", '"' + userName() + '"'
         buildConfigField "String", "BUILD_TIME", '"' + build_time + '"'
