--- a/common.gradle
+++ b/common.gradle
@@ -145,7 +145,7 @@ def getLogoPath(apkFileName) {
 /**
  * 复制文件
  * */
-def copyFile(String from, String toPath) {
+static def copyFile(String from, String toPath) {
     InputStream input = null
     OutputStream output = null
     try {
@@ -174,6 +174,33 @@ def copyFile(String from, String toPath) {
     }
 }
 
+//获取本机ip, 可能会有多个网卡信息
+static def getLocalIp() {
+    def ip = ''
+    NetworkInterface.getNetworkInterfaces().each {
+        if (it.isUp() && !it.isLoopback() && !it.isVirtual()) {
+            //Realtek Gaming GbE Family Controller/eth9
+            //VMware Virtual Ethernet Adapter for VMnet1/eth8
+            def displayName = it.getDisplayName()
+            //println displayName + '/' + it.getName()
+
+            displayName = displayName.toLowerCase()
+            if (displayName.contains("VMware".toLowerCase())) {
+                //忽略虚拟ip
+            } else {
+                it.getInetAddresses().each {
+                    //192.168.31.192
+                    //println it.getHostAddress()
+                    if (it.siteLocalAddress) {
+                        ip = it.getHostAddress()
+                    }
+                }
+            }
+        }
+    }
+    return ip
+}
+
 //导出
 ext {
     isMac = this.&isMac
@@ -189,4 +216,5 @@ ext {
     uploadFileSucceed = this.&uploadFileSucceed
     copyFile = this.&copyFile
     getLogoPath = this.&getLogoPath
+    getLocalIp = this.&getLocalIp
 }
