--- a/apk.gradle
+++ b/apk.gradle
@@ -47,12 +47,12 @@ android {
             gradleVersion.startsWith("7") ||
             gv >= '7') {
         /*Gradle4.1 以上的方法*/
-        
+
     } else if (gradleVersion.startsWith("6")) {
         /*Gradle4.0 以上的方法*/
         applicationVariants.all { variant ->
             def defPath = variant.packageApplicationProvider.get().outputDirectory.getAsFile().get().absolutePath
-            println "\napk.gradle ${gradleVersion}→APK默认输出目录:${defPath}"
+            println "\napk.gradle ${gradleVersion}→APK默认输出目录1:${defPath}"
 
             if (variant.buildType.name != "debug") {
                 variant.packageApplicationProvider.get().outputDirectory = new File(apkFolder, variant.name)
@@ -73,7 +73,7 @@ android {
         /*Gradle3.3 以上的方法*/
         applicationVariants.all { variant ->
             def defPath = variant.packageApplication.outputDirectory.getAsFile().get().absolutePath
-            println "\napk.gradle ${gradleVersion}→APK默认输出目录:${defPath}"
+            println "\napk.gradle ${gradleVersion}→APK默认输出目录2:${defPath}"
 
             if (variant.buildType.name != "debug") {
                 variant.packageApplication.outputDirectory = new File(apkFolder, variant.name)
@@ -94,7 +94,7 @@ android {
         /*Gradle3.0 以上的方法*/
         applicationVariants.all { variant ->
             def defPath = variant.getPackageApplication().outputDirectory.getAsFile().get().absolutePath
-            println "\napk.gradle ${gradleVersion}→APK默认输出目录:${defPath}"
+            println "\napk.gradle ${gradleVersion}→APK默认输出目录3:${defPath}"
 
             if (variant.buildType.name != "debug") {
                 //new File(project.rootDir.absolutePath + "/apk")
