* fix lib min sdk

--- a/libBase.gradle
+++ b/libBase.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+def haveLibMSdk = project.hasProperty("M_SDK_LIB")
 def C_SDK = 31
-def M_SDK = 21
+def M_SDK = haveLibMSdk ? project.ext.M_SDK_LIB : '21'
 def T_SDK = 31
 def V_CODE = 1
 def V_NAME = "1.0"
@@ -46,7 +47,9 @@ childProjects.each {
         def applicationPlugin = projectObj.plugins.findPlugin(application)
         //自动获取 主工程的 sdk配置信息
         //println applicationPlugin.extension.defaultConfig.applicationId
-        M_SDK = applicationPlugin.extension.defaultConfig.minSdkVersion.apiLevel
+        if (!haveLibMSdk) {
+            M_SDK = applicationPlugin.extension.defaultConfig.minSdkVersion.apiLevel
+        }
         T_SDK = applicationPlugin.extension.defaultConfig.targetSdkVersion.apiLevel
         C_SDK = applicationPlugin.extension.compileSdkVersion
     }
@@ -91,7 +94,7 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.aar'])
 
     //https://jcenter.bintray.com/org/jetbrains/kotlin/kotlin-stdlib-jdk8/
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$_kotlin_version"
+    //api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$_kotlin_version" //2022-11-4插件会自动依赖
 }
 
 //apply from: allGradle.version
