--- a/libBase.gradle
+++ b/libBase.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 
 def haveLibMSdk = project.hasProperty("M_SDK_LIB")
 def C_SDK = 31
-def M_SDK = haveLibMSdk ? project.ext.M_SDK_LIB : '21'
+def M_SDK = haveLibMSdk ? project.ext.M_SDK_LIB : 21
 def T_SDK = 31
 def V_CODE = 1
 def V_NAME = "1.0"
